mimic3-tts/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mimic3-tts
spec:
  ports:
  - name: mimic3
    port: 59125
    protocol: TCP
    targetPort: 59125
  selector:
    app.kubernetes.io/name: mimic3-tts
  type: ClusterIP
