mimic3-tts/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimic3-tts
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: cert-manager-redirect-https@kubernetescrd
spec:
  rules:
  - host: mimic3.k3s.yorgos.net.gr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mimic3-tts
              port:
                number: 59125

  tls:
    - secretName: mimic3-tls
      hosts:
        - mimic3.k3s.yorgos.net.gr
